syntax = "proto3";

option go_package = "internal/pkg/proto/refdata_pb";

message RefData {
    WordList wordList = 1;
    CEDict dict = 2;
}

message WordList {
    repeated string words = 1;
    map<string, int64> frequencies = 2;
}

message CEDict {
	map<string, Entries> entries  = 1;
    map<string, bool> validSyllables = 2;
    map<string, string> traditionalToSimplified = 3;
    map<string, Words> pinyinToSimplified = 5;
    map<string, bool> ambiguousWords = 6;

    message Entries {
        map<string, Definitions> entries = 1;
        string traditional = 2;
    }

    message Definitions {
        repeated string definitions = 1;
    }

    message Words {
        repeated string words = 1;
    }

    repeated string DEPRECATED_validSyllables = 4;
}
